--- a/css/contacts.css
+++ b/css/contacts.css
@@ -603,7 +603,7 @@ fieldset.adr ul li input.label { margin-top: -4px !important; }
 	padding: 0 .5em; margin: 0 auto;
 	float: right;
 }
-#contactsHeader .actions > * {
+#contactsHeader .action {
 	height: 20px;
 	margin: 0;
 	padding: 0 5px;
@@ -617,14 +617,49 @@ fieldset.adr ul li input.label { margin-top: -4px !important; }
 #contactlist { position: relative; top: 0; left: 0; right: 0; width: 100%; }
 #contactlist tr.contact { height: 3em; display: none; }
 #contactlist tr.active, #contactlist tr:hover { background-color: #eee; }
-#contactlist tr > td { border-bottom: 1px solid #DDDDDD; font-weight: normal; text-align: left; overflow: hidden; text-overflow: ellipsis; vertical-align: middle; white-space: nowrap; }
-#contactlist tr > td:hover { overflow: inherit; text-overflow: inherit; background-color: #fff; z-index: 200; }
-#contactlist tr > td:not(.adr) { width: 15%; }
-#contactlist tr > td.name>input[type=checkbox]:first-child { -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; filter:alpha(opacity=0); opacity:0; float:left; margin:.5em 0 0 1.2em; -webkit-transition:opacity 200ms; -moz-transition:opacity 200ms; -o-transition:opacity 200ms; transition:opacity 200ms; }
-#contactlist tr > td.name>input[type="checkbox"]:hover:first-child { -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=80)"; filter:alpha(opacity=80); opacity:.8; }
-#contactlist tr > td.name>input[type="checkbox"]:checked:first-child { -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; filter:alpha(opacity=100); opacity:1; }
-#contactlist tr > td.name { font-weight: bold; text-indent: 1.6em; -webkit-transition:background-image 500ms; -moz-transition:background-image 500ms; -o-transition:background-image 500ms;  transition:background-image 500ms; position:relative; background-position:1em .5em !important; background-repeat:no-repeat !important; }
-#contactlist tr > td a.mailto { position: absolute; float: right;  clear: none; cursor:pointer; width:16px; height:16px; margin: 2px; z-index: 200; opacity: 0.6; background-image:url('%webroot%/core/img/actions/mail.svg'); }
+#contactlist tr > td {
+	border-bottom: 1px solid #DDDDDD;
+	font-weight: normal;
+	text-align: left;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	vertical-align: middle;
+	white-space: nowrap;
+}
+#contactlist tr > td:hover {
+	overflow: inherit;
+	text-overflow: inherit;
+	background-color: #fff;
+	z-index: 200;
+	opacity: 1;
+}
+#contactlist tr > td:not(.adr) { max-width: 270px; }
+#contactlist tr > td.adr { max-width: 300px; }
+#contactlist tr > td.name > input[type=checkbox]:first-child {
+	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; filter:alpha(opacity=0); opacity:0;
+	-webkit-transition:opacity 200ms; -moz-transition:opacity 200ms; -o-transition:opacity 200ms; transition:opacity 200ms;
+	float:left;
+	margin:.5em 0 0 1.2em;
+}
+#contactlist tr > td.name > input[type="checkbox"]:hover:first-child {
+	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=80)"; filter:alpha(opacity=80); opacity:.8;
+}
+#contactlist tr > td.name > input[type="checkbox"]:checked:first-child {
+	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; filter:alpha(opacity=100); opacity:1;
+}
+#contactlist tr > td.name {
+	font-weight: bold; text-indent: 1.6em;
+	-webkit-transition:background-image 500ms; -moz-transition:background-image 500ms; -o-transition:background-image 500ms;  transition:background-image 500ms;
+	background-repeat:no-repeat !important;
+	position:relative; background-position:1em .5em !important;
+}
+#contactlist tr > td a.mailto {
+	position: absolute; float: right;  clear: none;
+	cursor:pointer;
+	width:16px; height:16px;
+	margin: 2px; z-index: 200;
+	opacity: 0.6; background-image:url('%webroot%/core/img/actions/mail.svg');
+}
 #contactlist tr > td a.mailto:hover { opacity: 0.8; }
 
 #contact { 
