--- a/css/contacts.css
+++ b/css/contacts.css
@@ -585,9 +585,9 @@ fieldset.adr ul li input.label { margin-top: -4px !important; }
 	top: 46px;
 	position: fixed;
 	height: 20px;
-	background: none repeat scroll 0 0 rgba(230,230,230,.9);
+	background: none repeat scroll 0 0 rgba(230,230,230,.95);
 	color: #999;
-	z-index: 1;
+	z-index: 999;
 	width: 100%;
 }
 #contactsHeader > tr {
@@ -633,8 +633,9 @@ fieldset.adr ul li input.label { margin-top: -4px !important; }
 	position: relative;
  	padding-bottom: 300px;
 	width: 100%;
+	z-index: 1;
 }
-#contactlist { position: absolute; top: 20px; left:250px; right: 0; width: 100%; }
+#contactlist { margin-top:20px; position: relative; width: 100%; }
 #contactlist td {
 	-moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
 }
@@ -660,7 +661,7 @@ fieldset.adr ul li input.label { margin-top: -4px !important; }
 	max-width: 180px;
 	min-width: 180px;
 }
-#contactlist tbody > tr > td.adr { width: 100%; }
+#contactlist tbody > tr > td.adr { width: 100%; max-width:300px; }
 #contactlist tbody > tr > td.name > input[type=checkbox]:first-child:not(.toggle) {
 	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; filter:alpha(opacity=0); opacity:0;
 	-webkit-transition:opacity 200ms; -moz-transition:opacity 200ms; -o-transition:opacity 200ms; transition:opacity 200ms;
