--- a/css/contacts.css
+++ b/css/contacts.css
@@ -154,7 +154,10 @@
 #firstrun p { font-size:1.2em; text-align:center; }
 #firstrun #selections { font-size:0.8em; margin: 2em auto auto auto; clear: both; }
 
-#contact textarea { min-height: 5em; width: 100%; margin: 0 !important; padding: 0 !important; outline: 0 !important;}
+#contact textarea {
+	min-height: 5em; width: 300px;
+	margin: 0 !important; padding: 0 !important; outline: 0 !important;
+}
 #contact footer {
 	padding: 5px;
 	width: 100%;
