--- a/css/contacts.css
+++ b/css/contacts.css
@@ -60,7 +60,7 @@
 	border: 1px solid #1d2d44; 
 	-moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; outline:none; 
 }
-#contact input:invalid, #contact input:hover:not([type="checkbox"]), #contact input:active:not([type="checkbox"]), #contact input:focus:not([type="checkbox"]), #contact input.active, #contact textarea:focus, #contact textarea:hover {
+#contact input:invalid, #contact input:hover:not([type="checkbox"]), #contact input:active:not([type="checkbox"]), #contact input:focus:not([type="checkbox"]), #contact input.active, #contact textarea:focus, #contact textarea {
 	border: 1px solid silver !important; 
 	-moz-border-radius:.3em; -webkit-border-radius:.3em; border-radius:.3em; 
 	outline:none; float: left;
