--- a/css/contacts.css
+++ b/css/contacts.css
@@ -170,12 +170,16 @@
 
 /* override the default margin on share dropdown */
 #dropdown {
-	margin: 0;
+	margin: 0; padding: 0;
 	-webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;
 	width: 100%;
 }
-#dropdown label { display: list-item; }
-#dropdown input[type="text"] { width: 90%; }
+#shareWithList {
+	width: 100%;
+}
+#shareWithList .cruds > label {
+	display: list-item;
+}
 /* reset box-sizing for multiSelect */
 #content div.multiselect, #content div.multiselect > * { -webkit-box-sizing: content-box; -moz-box-sizing: content-box; box-sizing: content-box; }
 
